add_executable(ebview
               bmh.c
               cellrendererebook.c
               dialog.c
               dictbar.c
               dirtree.c
               dump.c
               eb.c
               ebview.c
               external.c
               filter.c
               grep.c
               headword.c
               history.c
               hook.c
               jcode.c
               link.c
               log.c
               mainmenu.c
               menu.c
               misc.c
               multi.c
               pixmap.c
               popup.c
               pref_color.c
               pref_dictgroup.c
               pref_dirgroup.c
               pref_external.c
               pref_font.c
               pref_grep.c
               pref_gui.c
               pref_io.c
               pref_search.c
               pref_selection.c
               pref_shortcut.c
               pref_stemming.c
               pref_weblist.c
               preference.c
               reg.c
               render.c
               selection.c
               shortcut.c
               shortcutfunc.c
               splash.c
               statusbar.c
               textview.c
               thread_search.c
               xml.c
               xmlinternal.c
               websearch.c
               mainwindow.c
               )
target_include_directories(ebview PRIVATE ${LIBDB_INCLUDE_DIRS})
target_link_libraries(ebview PRIVATE GTK2::pangoxft GTK2::glib GTK2::gtk Threads::Threads
                      ${LIBEB_LIBRARIES})